--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
   <link rel="stylesheet" href="./styles/breakpoint.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" fetchpriority="high">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
   <title>Task Manager</title>
 </head>
-<h1>test</h1>
+<div class="pre-component">
+  <input type="text" placeholder="Adicione uma nova tarefa" class="input-component">
+</div>
+
+<div class="pre-component">
+  <button class="add-task">Criar<img src="/assets/add-svg.svg" alt="Adicionar nova tarefa."></button>
+</div>
+<div class="pre-component">
+  <button class="remove-task"><i class="fa-solid fa-trash"></i></button>
+</div>
 
 <body>
 
