add: header component

--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
   <title>Task Manager</title>
 </head>
-<div class="pre-component">
-  <input type="text" placeholder="Adicione uma nova tarefa" class="input-component">
-</div>
-
-<div class="pre-component">
-  <button class="add-task">Criar<img src="/assets/add-svg.svg" alt="Adicionar nova tarefa."></button>
-</div>
-<div class="pre-component">
-  <button class="remove-task"><i class="fa-solid fa-trash"></i></button>
-</div>
 
 <body>
-
+  <header class="main-header">
+    <img src="./assets/logo-svg.svg" width="126px" alt="Logo da aplicação">
+  </header>
+  <section action="" class="input-container">
+    <input type="text" placeholder="Adicione uma nova tarefa" class="input-component">
+    <button class="add-task">Criar<img src="/assets/add-svg.svg" alt="Adicionar nova tarefa."></button>
+  </section>
 </body>
 
 </html>
+
+<!--  To show display components style before get in prod enviroment -->
+<!-- <div class="pre-component">
+  <button class="remove-task"><i class="fa-solid fa-trash"></i></button>
+</div>
+<div class="pre-component">
+  <button class="remove-task"><i class="fa-solid fa-trash"></i></button>
+</div> -->
