feat: empty task show alert

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <button class="add-task">Criar<img src="/assets/add-svg.svg" alt="Adicionar nova tarefa."></button>
   </section>
 </body>
+<script src="/app.js" async></script>
 
 </html>
 
