update: cdn library icons latest version

--- a/index.html
+++ b/index.html
@@ -9,28 +9,37 @@
   <link rel="stylesheet" href="./styles/breakpoint.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" fetchpriority="high">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
   <title>Task Manager</title>
 </head>
 
 <body>
-  <header class="main-header">
+  <div class="pre-component">
+    <div class="task-item">
+      <p class="task-description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</p>
+      <i class="bi bi-trash3 remove-task"></i>
+    </div>
+
+    <div class="task-item">
+      <p class="task-description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</p>
+      <i class="bi bi-trash3 remove-task"></i>
+    </div>
+
+    <div class="task-item">
+      <p class="task-description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</p>
+      <i class="bi bi-trash3 remove-task"></i>
+    </div>
+  </div>
+
+  <!-- <header class="main-header">
     <img src="./assets/logo-svg.svg" width="126px" alt="Logo da aplicação">
   </header>
   <section action="" class="input-container">
     <input type="text" placeholder="Adicione uma nova tarefa" class="input-component">
     <button class="add-task">Criar<img src="/assets/add-svg.svg" alt="Adicionar nova tarefa."></button>
-  </section>
+  </section> -->
 </body>
 <script src="/app.js" async></script>
 
 </html>
-
-<!--  To show display components style before get in prod enviroment -->
-<!-- <div class="pre-component">
-  <button class="remove-task"><i class="fa-solid fa-trash"></i></button>
-</div>
-<div class="pre-component">
-  <button class="remove-task"><i class="fa-solid fa-trash"></i></button>
-</div> -->
