feat(add): create and remove task

--- a/index.html
+++ b/index.html
@@ -15,30 +15,26 @@
 </head>
 
 <body>
-  <div class="pre-component">
-    <div class="task-item">
-      <p class="task-description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</p>
-      <i class="bi bi-trash3 remove-task"></i>
-    </div>
-
-    <div class="task-item">
-      <p class="task-description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</p>
-      <i class="bi bi-trash3 remove-task"></i>
-    </div>
-
-    <div class="task-item">
-      <p class="task-description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</p>
-      <i class="bi bi-trash3 remove-task"></i>
-    </div>
-  </div>
-
-  <!-- <header class="main-header">
+  <header class="main-header">
     <img src="./assets/logo-svg.svg" width="126px" alt="Logo da aplicação">
   </header>
-  <section action="" class="input-container">
+  <span action="" class="input-container">
     <input type="text" placeholder="Adicione uma nova tarefa" class="input-component">
     <button class="add-task">Criar<img src="/assets/add-svg.svg" alt="Adicionar nova tarefa."></button>
-  </section> -->
+  </span>
+  <section class="task-component" id="task-component">
+    <!-- <div class="task-item">
+      <p class="task-description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</p>
+      <i class="bi bi-trash3 remove-task"></i>
+    </div>
+
+    <div class="task-item">
+      <p class="task-description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</p>
+      <i class="bi bi-trash3 remove-task"></i>
+    </div>
+    </div> -->
+  </section>
+
 </body>
 <script src="/app.js" async></script>
 
