add: footer component

--- a/index.html
+++ b/index.html
@@ -25,16 +25,26 @@
   <section class="task-component" id="task-component">
     <!-- <div class="task-item">
       <p class="task-description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</p>
-      <i class="bi bi-trash3 remove-task"></i>
-    </div>
-
-    <div class="task-item">
-      <p class="task-description">Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.</p>
-      <i class="bi bi-trash3 remove-task"></i>
-    </div>
+      <div>
+        <img src="./assets/Group 1.svg" alt="" class='check-task' srcset="">
+        <i class="bi bi-trash3 remove-task"></i>
+      </div>
     </div> -->
   </section>
-
+  <footer class="footer">
+    <ul class="contact-component">
+      <li>
+        <a href="https://github.com/samuelribeiroo" target="_blank">
+          <img src="/assets/linkeding-svg.svg" alt="" srcset="">
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/samuelribeiroo" target="_blank">
+          <img src="/assets/github-svg.svg" alt="" srcset="">
+        </a>
+      </li>
+    </ul>
+  </footer>
 </body>
 <script src="/app.js" async></script>
 
